# verovio

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Verovio.podspec  build_xcframework.sh  codemeta.json  pyproject.toml  setup.py
.github/workflows/: ci_build.yml  python-ci-wheel.yml
Verovio.xcodeproj/: project.pbxproj
bindings/iOS/: all.h
bindings/java/: pom.xml
cmake/: CMakeLists.txt
data/: Bravura.css  Bravura.xml  Cantata.css  Cantata.xml  Gootville.css  Legato.css  Legato.xml  Leipzig.css  Leipzig.xml  Leland.css  Leland.xml  Maestro.css  Maestro.xml  Petaluma.css  Petaluma.xml
data/Bravura/: E4BE.xml  E4BF.xml  EC90-octaveLoco.xml  EC91-octaveBaselineA.xml  EC92-octaveSuperscriptA.xml  EC93-octaveBaselineB.xml  EC94-octaveSuperscriptB.xml  EC95-octaveBaselineM.xml  EC96-octaveSuperscriptM.xml  EC97-octaveBaselineV.xml  EC98-octaveSuperscriptV.xml  (+64 more)
fonts/: generate-bbox.py  generate_all.sh  glyphnames.json  supported.xml  supported.xsl
src/: accid.cpp  adjustfloatingpositionerfunctor.cpp  artic.cpp  att.cpp  bboxdevicecontext.cpp  beam.cpp  calcalignmentpitchposfunctor.cpp  calcchordnoteheadsfunctor.cpp  chord.cpp  clef.cpp  devicecontext.cpp  doc.cpp  drawinginterface.cpp  durationinterface.cpp  dynam.cpp  enotetoolkit.cpp  ftrem.cpp  glyph.cpp  hairpin.cpp  horizontalaligner.cpp  iohumdrum.cpp  iomei.cpp  iomusxml.cpp  iopae.cpp  keysig.cpp  layer.cpp  layerelement.cpp  ligature.cpp  mdiv.cpp  measure.cpp  metersig.cpp  neume.cpp  note.cpp  object.cpp  octave.cpp  options.cpp  page.cpp  pages.cpp  pb.cpp  pitchinterface.cpp  (+27 more)
tools/: main.cpp
(+1548 files in other folders)
